Prevent the logo to break layout on mobile

--- a/itou/static/css/itou.css
+++ b/itou/static/css/itou.css
@@ -141,6 +141,11 @@ header.layout-section {
     margin-right: 10px;
 }
 
+.layout-header-logo {
+    max-width: 400px;
+    min-width: 200px;
+}
+
 .layout-header-logo:focus,
 .layout-header-logo:active,
 .layout-header-logo:hover {
